--- a/src/App.css
+++ b/src/App.css
@@ -25,17 +25,6 @@ a:hover {
   color: rgb(107, 107, 107);
 }
 
-ul li {
-  list-style: none;
-  margin-bottom: 5px;
-  margin-left: -20px;
-  font-size: 40px;
-}
-
-ol li {
-  list-style: none;
-}
-
 
 /* LOADING SCREEN */
 #loader-wrapper {
@@ -157,108 +146,17 @@ footer {
 }
 
 /* MAIN PAGE DATA */
-
-.no-list-style {list-style: none;}
-
-.underline-text {text-decoration: underline;}
-
-#name {
+.main-content{
   display: flex;
-  margin-top: 50px;
-  margin-left: -40px;
+  margin-top: 200px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-.blinker {
-  animation: blinker 1s infinite;
-  background-color: lime;
-  width: 30px;
-  height: 60px;
-  margin-top: 50px;
-}
-
-.project-img:hover {
-  opacity: .7;
-  border: 5px dashed lime;
-}
-
-/* MAIN CONTENT SUBSECTION ELEMENTS*/
-#main-content-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content:space-evenly;
-}
-
-.subsection {
-  border: 5px solid lime;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  max-width: 500px;
-  min-width: 300px;
-  height: auto;
-  font-size: 18px;
-}
-
-.subsection ul li a{
-  color: lime;
-  font-size: 22px;
-}
-.subsection ul li a:hover{
-  text-decoration: underline;
-  color: #3e8e41;
-  cursor: pointer;
-}
-
-.subsection-h2 {
-  background-color: lime;
-  color: black;
-  margin-top: 0px;
-}
-
-/* BREAKPOINTS */
-
-@media screen and (max-width: 850px) {
-  header > span {
-      display: none;
-  }
-
-  #name {
-      font-size: xx-small;
-      margin-left: -50px;
-  }
-
-  #projects-label {
-      margin-top: -7%;
-      font-size: 22px;
-  }
-
-  .dropbtn {
-      margin-top: -10px;
-      width: 100px;
-      height: 50px;
-      font-size: 20px;
-  }
-  .blinker {
-      display: none;
-  }
-
-  #status-span {
-      display: none;
-  }
-
-  footer {
-      justify-content: center;
-  }
-
-  ul li {
-      font-size: 50px;
-  }
-}
-
-@media screen and (max-width: 762px) {
-  #projects-label {
-      top: 910px;
-  }
+.name {
+  font-size: 50px;
 }
 
 /* CRT EFFECTS */
